--- a/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring.yaml
+++ b/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring.yaml
@@ -1,7 +1,7 @@
 blueprint:
   name: Trigger for lysstyring
   description: >
-    Dette er første del av lysstyringen. Det er en automasjon som ved bevegelse får en input_boolean til å¨slå seg på. Etter en gitt tid uten aktivitet slår den verdien av igjen.
+    Dette er første del av lysstyringen. Det er en automasjon som ved bevegelse får en input_boolean til å slå seg på. Etter en gitt tid uten aktivitet slår den verdien av igjen.
 
     For at dette skal fungere må scener aktiveres av denne verdien.
 
@@ -45,6 +45,8 @@ trigger:
     entity_id: !input input_booleans
     from: "on"
     to: "off"
+  - platform: time_pattern
+    minutes: "/5"
 
 condition:
   - condition: state
@@ -55,7 +57,7 @@ action:
   - choose:
       - conditions:
           - condition: template
-            value_template: "{{ trigger.to_state.state == 'on' and trigger.from_state.state == 'off' }}"
+            value_template: "{{ trigger.platform == 'state' and trigger.to_state.state == 'on' and trigger.from_state.state == 'off' }}"
         sequence:
           - service: input_boolean.turn_on
             target:
@@ -71,6 +73,17 @@ action:
                 to: "off"
             continue_on_timeout: true
             timeout: !input countdown_time
+      - conditions:
+          - condition: template
+            value_template: >
+              {{
+                trigger.platform == 'time_pattern' and 
+                states | selectattr('entity_id', 'in', (input.binary_sensors | list)) | selectattr('state', 'eq', 'on') | list | length > 0
+              }}
+        sequence:
+          - service: input_boolean.turn_on
+            target:
+              entity_id: !input input_booleans
   - choose:
       - conditions:
           - condition: state
