--- a/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring.yaml
+++ b/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring.yaml
@@ -1,7 +1,7 @@
 blueprint:
   name: Trigger for lysstyring
   description: >
-    Dette er første del av lysstyringen. Det er en automasjon som ved bevegelse får en input_boolean til å slå seg på. Etter en gitt tid uten aktivitet slår den verdien av igjen.
+    Dette er første del av lysstyringen. Det er en automasjon som ved bevegelse får en input_boolean til å¨slå seg på. Etter en gitt tid uten aktivitet slår den verdien av igjen.
 
     For at dette skal fungere må scener aktiveres av denne verdien.
 
@@ -60,21 +60,17 @@ action:
           - service: input_boolean.turn_on
             target:
               entity_id: !input input_booleans
-          - repeat:
-              while:
-                - condition: state
-                  entity_id: !input input_booleans
-                  state: "on"
-              sequence:
-                - wait_template: "{{ states | selectattr('entity_id', 'in', input.binary_sensors) | selectattr('state', 'eq', 'on') | list | length > 0 }}"
-                  timeout: "00:01:00"
-                  continue_on_timeout: true
-                - choose:
-                    - conditions:
-                        - condition: template
-                          value_template: "{{ states | selectattr('entity_id', 'in', input.binary_sensors) | selectattr('state', 'eq', 'on') | list | length > 0 }}"
-                      sequence:
-                        - wait_template: "{{ false }}"  # This ensures that the sequence is stopped and restarted.
+          - wait_for_trigger:
+              - platform: state
+                entity_id: !input binary_sensors
+                from: "off"
+                to: "on"
+              - platform: state
+                entity_id: !input input_booleans
+                from: "on"
+                to: "off"
+            continue_on_timeout: true
+            timeout: !input countdown_time
   - choose:
       - conditions:
           - condition: state
@@ -85,9 +81,5 @@ action:
       - service: input_boolean.turn_off
         target:
           entity_id: !input input_booleans
-
-  - wait_template: "{{ is_state('input_boolean.tilstede', 'off') }}"
-    timeout: !input countdown_time
-    continue_on_timeout: false
 
 mode: restart
