--- a/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring.yaml
+++ b/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring.yaml
@@ -60,17 +60,19 @@ action:
           - service: input_boolean.turn_on
             target:
               entity_id: !input input_booleans
-          - wait_for_trigger:
-              - platform: state
-                entity_id: !input binary_sensors
-                from: "off"
-                to: "on"
-              - platform: state
-                entity_id: !input input_booleans
-                from: "on"
-                to: "off"
-            continue_on_timeout: true
-            timeout: !input countdown_time
+          - repeat:
+              while:
+                - condition: template
+                  value_template: >-
+                    {% for sensor in (binary_sensors + input_booleans) %}
+                      {% if is_state(sensor, 'on') %}
+                        {{ false }}
+                      {% endif %}
+                    {% endfor %}
+                    {{ true }}
+              sequence:
+                - delay: !input countdown_time
+
   - choose:
       - conditions:
           - condition: state
