--- a/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring.yaml
+++ b/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring.yaml
@@ -9,32 +9,32 @@ blueprint:
   author: Karl Jørgen
   source_url: https://github.com/karlalskens/Home-Assistant-Lysstyring/blob/main/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring.yaml
   input:
-    binary_sensors:
-      name: Binary Sensors
-      description: Hvilke bevegelsessensorer skal brukes som triggere?
-      selector:
-        entity:
-          domain: binary_sensor
-          multiple: true
     input_booleans:
-      name: Input Booleans
-      description: Angi hjelpeverdien for området. Må være en input_boolean som begynner med "tilstede_".
+      name: Velg område
+      description: Angi hjelpeverdien for området. Må være en input_boolean som begynner med "tilstede_". Har du ikke en fra før, kan du opprette en.
       selector:
         entity:
           domain: input_boolean
           multiple: false
-    countdown_time:
-      name: Countdown Time
-      description: Hvor lang tid skal det ta før lyset skal slukkes?
-      selector:
-        duration: {}
     bypass_boolean:
-      name: Bypass Boolean
+      name: Velg Variabel som deaktiverer tidsstyringen
       description: Hvilken hjelpeverdi skal brukes til å deaktivere styringen?
       selector:
         entity:
           domain: input_boolean
           multiple: false
+    binary_sensors:
+      name: Bevegelsessensorer
+      description: Hvilke bevegelsessensorer skal brukes som triggere?
+      selector:
+        entity:
+          domain: binary_sensor
+          multiple: true
+    countdown_time:
+      name: Velg tid
+      description: Hvor lang tid skal det ta før lyset skal slukkes?
+      selector:
+        duration: {}
   trigger:
     - platform: state
       entity_id: !input binary_sensors
