La til delay før loop

--- a/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring.yaml
+++ b/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring.yaml
@@ -57,6 +57,7 @@ action:
           - service: input_boolean.turn_on
             target:
               entity_id: !input input_booleans
+          - delay: !input countdown_time
           - repeat:
               while:
                 - condition: template
