--- a/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring_beta.yaml
+++ b/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring_beta.yaml
@@ -192,11 +192,13 @@ action:
           {% endif %}
         {% endif %}
   - choose:
-      - conditions:  
-          - condition: trigger #Hvis en begelsessensor blir utløst
-            id: 'bevegelse_utløst'
-          - condition: trigger #Hvis områdets input_boolean blir slått på
-            id: 'område_boolean_aktivert'
+      - conditions:
+          - condition: or
+            conditions:
+              - condition: trigger #Hvis en begelsessensor blir utløst
+                id: 'bevegelse_utløst'
+              - condition: trigger #Hvis områdets input_boolean blir slått på
+                id: 'område_boolean_aktivert'
         sequence:
           - choose: #Hvis input_boolean er av
               - conditions:
