--- a/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring_beta.yaml
+++ b/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring_beta.yaml
@@ -211,7 +211,7 @@ action:
             data:
               transition: !input transition_tid
             target:
-              entity_id: aktuell_scene
+              entity_id: "{{ aktuell_scene }}"
       - conditions:
           - condition: or
             conditions:
